k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conjur-explainer
  namespace: conjur
  labels:
    app: conjur-explainer
spec:
  selector:
    app: conjur-explainer
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
