k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conjur-explainer
  namespace: conjur
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx-internal
  tls:
    - hosts:
        - demo.minha.cloud
      secretName: k8scert
  rules:
    - host: demo.minha.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: conjur-explainer
                port:
                  number: 80
